Fix issue preventing table headers from displaying on mobile in collapsible blocks

--- a/src/css/adoc/collapsible-blocks.css
+++ b/src/css/adoc/collapsible-blocks.css
@@ -25,6 +25,10 @@ details .content :is(h2, h3, h4, h5, h6) {
   padding-top: 0;
 }
 
+details .content table.nested {
+  margin: 12px 0;
+}
+
 details summary > * {
   display: inline;
 }
